# manavdahra.github.io

./: .gitignore  DEPLOYMENT.md  README.md  app.py  freeze.py  index.html  main.js  main.py  package-lock.json  package.json  pyproject.toml  style.css  vite.config.js  webpack.config.js  webpack.dev.js  webpack.prod.js
blogs/: index.html  snake-game.html
docs/: index.css  index.html  main.js  main5.js  physics.js  snake-2d.html  style.css  three-core.js  three-extras.js
docs/about/: index.html
docs/aiml/: training-loop.js
docs/blog/: index.html
docs/blog/aimlj-1/: index.html
docs/blog/aimlj-2-hypothesis/: index.html
docs/blog/aimlj-2-linear-regression/: index.html
docs/blog/distributed-systems-lessons/: index.html
docs/blog/mechanistic-interpretability-intro/: index.html
docs/blog/snake-game/: index.html
docs/blogs/: 27-01-2024.html  blogs-index.html  index.html  snake-game.html
docs/game/: main.js  snake-game.js
docs/snake-2d/: index.html  index.js  index.wasm  snake-2d.js
partials/: footer.hbs  navbar.hbs
posts/: aimlj-1.md  aimlj-2-hypothesis.md  aimlj-2-linear-regression.md  distributed-systems-lessons.md  mechanistic-interpretability-intro.md  snake-game.md  transformer-circuits-attention.md  understanding-dynamodb-design-patterns.md
public/: robots.txt  sitemap.xml  style.css
public/blogs/: 27-01-2024.html  blogs-index.html
src/: index.js  snake-game.js  style.css
src/objects/: plane.js  snake.js
static/css/: style.css
templates/: about.html  base.html  blog.html  home.html  post.html  post_game.html
(+5 files in other folders)
